// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the UI as expected 1`] = `
<div>
  <ul>
    <li>
      <button
        onClick={[Function]}
      >
        title
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders the UI as expected 2`] = `
<div>
  <ul>
    <li />
  </ul>
</div>
`;
